--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Addresse</h3>
-                  <p>tunis, Tunis, Tunisia</p>
+                  <p>Tunis, Tunisia</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -218,18 +218,13 @@
                 </div>
 
                 <div class="col-md-6">
-                  <label for="email-field" class="pb-2">Adresse mail</label>
-                  <input type="email" class="form-control" name="email" id="email-field" required="">
+                  <label for="email-field" class="pb-2">Numéro de telephone</label>
+                  <input type="tel" class="form-control" name="tel" id="email-field" required="">
                 </div>
 
                 <div class="col-md-12">
-                  <label for="subject-field" class="pb-2">Sujet</label>
+                  <label for="subject-field" class="pb-2">Adresse</label>
                   <input type="text" class="form-control" name="subject" id="subject-field" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <label for="message-field" class="pb-2">Message</label>
-                  <textarea class="form-control" name="message" rows="10" id="message-field" required=""></textarea>
                 </div>
 
                 <div class="col-md-12 text-center">
@@ -274,8 +269,8 @@
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4 id="contact-title">Contact</h4>
-          <p>tunis, Tunis, Tunisia</p>
-          <p class="mt-4"><strong>Phone:</strong> <span>+216 50 024 960</span></p>
+          <p>Tunis, Tunisia</p>
+          <p class="mt-4"><strong>Tel:</strong> <span>+216 50 024 960</span></p>
         </div>
 
       </div>
