--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
               <div class="portfolio-content h-100">
                 <a href="assets/img/portfolio 1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img
                     src="assets/img/portfolio 1.jpg" class="img-fluid" alt=""></a>
+                    <div class="portfolio-info">Prix : 27 TND</div>
 
               </div>
             </div><!-- End Portfolio Item -->
@@ -154,6 +155,7 @@
               <div class="portfolio-content h-100">
                 <a href="assets/img/portfolio 2.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img
                     src="assets/img/portfolio 2.jpg" class="img-fluid" alt=""></a>
+                    <div class="portfolio-info">Prix : 27 TND</div>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -161,6 +163,7 @@
               <div class="portfolio-content h-100">
                 <a href="assets/img/portfolio 3.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img
                     src="assets/img/portfolio 3.jpg" class="img-fluid" alt=""></a>
+                    <div class="portfolio-info">Prix : 27  TND</div>
               </div>
             </div><!-- End Portfolio Item -->
 
